grammar/restriction.treetop
require 'treetop-utils'

grammar RestrictionGrammar
  rule expression
    base:conjunction ' '* ops:('>' ' '* c:conjunction)+ <Implication>
    /
    conjunction
    /
    term
    /
    atom
  end

  rule conjunction
    base:term ' '* ops:(
      ('&' ' '* term)+ <Conjunction::Meet>
      /
      ('|' ' '* term)+ <Conjunction::Join>
    )+ <Conjunction>
    /
    term
    /
    atom
  end
  
  rule term 
    '!' ' '* term <Negation>
    /
    '(' ' '* expression ' '* ')' ' '* <Parethesis>
    /
    atom
  end
           
  rule atom
    ':' name:([^ !&|>]+) ' '* <Atom>
  end
end
